--- a/usr/share/help/ko/grac-editors/introduction.html
+++ b/usr/share/help/ko/grac-editors/introduction.html
@@ -36,7 +36,7 @@
 
  저장 매체를 통한 정보유출 피해를 최소화하기 위한 대책으로 저장 매체에 보안 솔루션을 적용하거나, 보안기능을 갖는 보안 매체를 이용하는 방법이 있습니다.
         
- 이를 위해 구름 플랫폼에서는  자체적으로 매체제어 에디터를 제공하고 있습니다.</pre>
+ 이를 위해 구름 플랫폼에서는 자체적으로 매체제어 편집기를 제공하고 있습니다.</pre>
        </font>
      </div>
 
